# simple_api_server

./: CMakeLists.txt  README.md
doc/: Doxyfile
src/: http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp  main.cpp
